--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./javascript/upload_video.css">
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans' type='text/css'>
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -17,5 +19,9 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script src="//apis.google.com/js/client:plusone.js"></script>
+  <script src="./javascript/cors_upload.js"></script>
+  <script src="./javascript/upload_video.js"></script>
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans' type='text/css'>
 </body>
 </html>
